Give time to external unpackers to uncompress very big files. Show more error messages

Notes:
1) A method in order to {check if the process is running} was used like the
one in <https://doc.qt.io/qt-5/qprocess.html>:
    if (!builder.waitForFinished())
        qDebug() << "Make failed:" << builder.errorString();
    else
        qDebug() << "Make output:" << builder.readAll();
2) An
    error(KIO::ERR_SLAVE_DEFINED, i18n("After [...]
line was utilized, which is analogous to the
    error(KIO::ERR_SLAVE_DEFINED, i18n("Copying to mtp slaves is still under development!"));
line in
    https://github.com/KDE/kio-stash/blob/master/src/ioslave/ioslave.cpp
3) A `proc.waitForFinished(-1);` line was used, like two similar ones
in kmountman.cpp.

GUI: A new error message can be seen by the user.

FIXED: [ 433294 ] Gibberish error when extracting large file from zip archive
BUG: 433294

Revision: https://invent.kde.org/utilities/krusader/-/merge_requests/44